2009-01-27  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/toolchain/batlib_Sexp_Conv.mli: [opaque] renamed [sexp_opaque]

	* src/core/toolchain/_tags: batlib_Sexp_Conv.ml now uses [use_optcomp]

	* src/core/toolchain/batlib_Sexp_Conv.ml: added #if for [ParseError]/[Parse_error] upstream renaming

	* src/core/_tags: extlib.mli now uses [use_optcomp]

	* src/core/extlib/extGc.mli: [control.allocation_policy] added, for OCaml 3.11

	* doc/batteries/html/extensions.html: flattened

	* src/main/threads/batteries.ml: [ExtArg] replaces [Batlib_Baselib_Arg]

	* src/core/extlib/extArg.ml*: created

	* src/core/extlib/extPervasives.ml*: [String.lowercase], [String.uppercase] added

	* src/core/extlib/enum.ml*: [flatten] added

	* src/main/nothreads/batteries.ml: [ExtSys] replaces [Sys], [ExtUnix] replaces [Unix]

	* src/main/threads/batteries.ml: [ExtSys] replaces [Batlib_Baselib_Sys]

	* src/core/extlib.mlpack: [ExtSys] added

	* src/core/extlib/extSys.ml*: created

	* src/syntax/pa_strings/pa_estring.ml: conditional compilation added

	* myocamlbuild.ml: [Preprocessing] added

2009-01-26  David Teller  <David.Teller@univ-orleans.fr>

	* src/syntax/pa_batteries/pa_batteries.ml: fixed comments

	* build/META.in: [pa_strings] added

	* Makefile.in: pa_strings.cmo, pa_estring.cmo, pa_estring_top.cmo added
	
	* src/syntax/pa_strings/pa_strings.ml: created

	* examples/examples.itarget: [conv] added

	* examples/conv.ml: created

	* src/core/extlib/charEncodings.ml*: [Malformed_code] added
	
	* src/core/extlib/charEncodings.ml: [transcode_out] now doesn't use [Encoding.convert_out]

	* src/core/extlib/charEncodings.ml: [transcode_in] now doesn't use [Encoding.convert_in]

	* src/core/extlib/IO.ml: flattened

	* src/core/extlib/charEncodings.ml: now comparing encodings names rather than encodings themselves

	* src/core/extlib/charEncodings.ml*: [of_stuff], [stuff_of] renamed [as_encoded]/[encoded_as]
	

2009-01-25  David Teller  <David.Teller@univ-orleans.fr>
