@@ -9,7 +9,7 @@
 <batteries_core_threads.cmx>:    for-pack(Batteries_core_threads_pack)
 <toolchain.cmx>:         for-pack(Batteries_core_pack)
 <toolchain.*>:           use_camlp4,use_camlp4_full
-<toolchain.mli>:         pkg_sexplib
+<toolchain.mli>:         pkg_sexplib,camlp4o,use_optcomp
 <toolchain.odoc>:        pkg_sexplib
 <extlib.mli>:            pkg_sexplib,pkg_camomile,camlp4o,use_optcomp
 <extlib.cma>:            link_all
