@@ -5,6 +5,7 @@ include Conv
 open Extlib.IO
 
 (** {6 Types}*)
+
 #if ocaml_version < (3, 11) (*The type was renamed between versions*)
 type 'a sexp_opaque = 'a
 
