@@ -233,13 +233,17 @@ val sexp_of_fun : ('a -> 'b) -> Sexp.t
 *)
 type 'a sexp_opaque = 'a
 
+#if ocaml_version < (3, 11)
 val sexp_of_opaque : ('a -> Sexp.t) -> 'a sexp_opaque -> Sexp.t
 (** [sexp_of_opaque _ _] converts opaque OCaml-values to S-expressions. 
-
-    This means the user need not provide converters,
-    but the result cannot be interpreted. 
 *)
+#else
+val sexp_of_opaque : 'a -> Sexp.t
+(** [sexp_of_opaque x] converts the value [x] of opaque type to an
+    S-expression.  This means the user need not provide converters,
+    but the result cannot be interpreted. *)
 
+#endif
 
 val string_of__of__sexp_of : ('a -> Sexp.t) -> 'a -> string
 (** [string_of__of__sexp_of conv x] converts the OCaml-value [x] to
